// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarList should render 1`] = `
"<div class=\\"MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded\\">
  <table class=\\"MuiTable-root makeStyles-root-1\\" aria-label=\\"car list table\\">
    <thead class=\\"MuiTableHead-root\\">
      <tr class=\\"MuiTableRow-root MuiTableRow-head\\">
        <th class=\\"MuiTableCell-root MuiTableCell-head\\" scope=\\"col\\">Гос. Номер</th>
        <th class=\\"MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter\\" scope=\\"col\\">Марка, Модель</th>
        <th class=\\"MuiTableCell-root MuiTableCell-head sortColumn MuiTableCell-alignCenter\\" scope=\\"col\\"><span class=\\"MuiButtonBase-root MuiTableSortLabel-root\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">Кол-во Аренд<svg class=\\"MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z\\"></path></svg></span></th>
        <th class=\\"MuiTableCell-root MuiTableCell-head sortColumn MuiTableCell-alignCenter\\" scope=\\"col\\"><span class=\\"MuiButtonBase-root MuiTableSortLabel-root\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">Доход<svg class=\\"MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z\\"></path></svg></span></th>
        <th class=\\"MuiTableCell-root MuiTableCell-head sortColumn MuiTableCell-alignCenter\\" scope=\\"col\\"><span class=\\"MuiButtonBase-root MuiTableSortLabel-root\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">Происшествий<svg class=\\"MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z\\"></path></svg></span></th>
        <th class=\\"MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter\\" scope=\\"col\\">Статус</th>
      </tr>
    </thead>
    <tbody class=\\"MuiTableBody-root\\">
      <tr class=\\"MuiTableRow-root\\">
        <th class=\\"MuiTableCell-root MuiTableCell-body\\" role=\\"cell\\" scope=\\"row\\">А 100 АА</th>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\"><a class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary\\" href=\\"/cars/1\\">Hyundai solaris 2014</a></td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">4</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">1000</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">0</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">Свободен</td>
      </tr>
      <tr class=\\"MuiTableRow-root\\">
        <th class=\\"MuiTableCell-root MuiTableCell-body\\" role=\\"cell\\" scope=\\"row\\">А 101 АА</th>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\"><a class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary\\" href=\\"/cars/2\\">Kia Rio 2014</a></td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">2</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">2000</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">1</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">Занят</td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`CarList should render with sorted items 1`] = `
"<div class=\\"MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded\\">
  <table class=\\"MuiTable-root makeStyles-root-2\\" aria-label=\\"car list table\\">
    <thead class=\\"MuiTableHead-root\\">
      <tr class=\\"MuiTableRow-root MuiTableRow-head\\">
        <th class=\\"MuiTableCell-root MuiTableCell-head\\" scope=\\"col\\">Гос. Номер</th>
        <th class=\\"MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter\\" scope=\\"col\\">Марка, Модель</th>
        <th class=\\"MuiTableCell-root MuiTableCell-head sortColumn MuiTableCell-alignCenter\\" scope=\\"col\\"><span class=\\"MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-active\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">Кол-во Аренд<svg class=\\"MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z\\"></path></svg></span></th>
        <th class=\\"MuiTableCell-root MuiTableCell-head sortColumn MuiTableCell-alignCenter\\" scope=\\"col\\"><span class=\\"MuiButtonBase-root MuiTableSortLabel-root\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">Доход<svg class=\\"MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z\\"></path></svg></span></th>
        <th class=\\"MuiTableCell-root MuiTableCell-head sortColumn MuiTableCell-alignCenter\\" scope=\\"col\\"><span class=\\"MuiButtonBase-root MuiTableSortLabel-root\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">Происшествий<svg class=\\"MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z\\"></path></svg></span></th>
        <th class=\\"MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter\\" scope=\\"col\\">Статус</th>
      </tr>
    </thead>
    <tbody class=\\"MuiTableBody-root\\">
      <tr class=\\"MuiTableRow-root\\">
        <th class=\\"MuiTableCell-root MuiTableCell-body\\" role=\\"cell\\" scope=\\"row\\">А 101 АА</th>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\"><a class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary\\" href=\\"/cars/2\\">Kia Rio 2014</a></td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">2</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">2000</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">1</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">Занят</td>
      </tr>
      <tr class=\\"MuiTableRow-root\\">
        <th class=\\"MuiTableCell-root MuiTableCell-body\\" role=\\"cell\\" scope=\\"row\\">А 100 АА</th>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\"><a class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary\\" href=\\"/cars/1\\">Hyundai solaris 2014</a></td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">4</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">1000</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">0</td>
        <td class=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter\\">Свободен</td>
      </tr>
    </tbody>
  </table>
</div>"
`;
